# semi-mpc-zerotest

./: .gitignore  README.md  zerotest.cpp  zerotest.h
field/: field.h  mat.cpp  mat.h
party/: CompParty.cpp  CompParty.h  DataParty.h
test/: CMakeLists.txt  google_test.cpp
utils/: utils.cpp  utils.h
